--- a/app/views/needs/user_index.html.haml
+++ b/app/views/needs/user_index.html.haml
@@ -11,7 +11,31 @@
           to see if you could help someone else.
         -else
           You will be able to see who is offering help as soon as you're validated.
-      %h3 Open requests
+      %h3 My requests that I'm chatting about
+      %ul.nav.nav-tabs.nav-stacked
+        -@need_chats.each do |need|
+          %li
+            =link_to need do
+              .list-image
+                =image_for_with_validation(need.user, "60x50#")
+                %p.small-text=need.user
+              %h3=need.title
+              %h5.needs-description=truncate(need.description, :length =>95)
+              %p
+                =messages_badge(current_user.new_notification_count("my_requests_chat", need))
+      %h3 My requests where I've accepted help from others
+      %ul.nav.nav-tabs.nav-stacked
+        -@needs_accepted.each do |need|
+          %li
+            =link_to need do
+              .list-image
+                =image_for_with_validation(need.user, "60x50#")
+                %p.small-text=need.user
+              %h3=need.title
+              %h5.needs-description=truncate(need.description, :length =>95)
+              %p
+                =messages_badge(current_user.new_notification_count("my_requests", need))
+      %h3 My open requests
       %ul.nav.nav-tabs.nav-stacked
         -@needs.order('created_at DESC').reject{ |i| i.has_accepted_offer? }.sort_by{|i| -current_user.new_notification_count("my_requests", i)}.each do |need|
           %li
@@ -23,18 +47,30 @@
               %h5.needs-description=truncate(need.description, :length =>95)
               %p
                 =messages_badge(current_user.new_notification_count("my_requests", need))
-      %h3 Accepted requests
+      %h3 Other people's general offers that I'm chatting about
       %ul.nav.nav-tabs.nav-stacked
-        -@needs.order('created_at DESC').select{ |i| i.has_accepted_offer? }.each do |need|
+        -@general_offers_chats.each do |offer|
           %li
-            =link_to need do
+            =link_to offer do
               .list-image
-                =image_for_with_validation(need.user, "60x50#")
-                %p.small-text=need.user
-              %h3=need.title
-              %h5.needs-description=truncate(need.description, :length =>95)
+                =image_for_with_validation(offer.user, "60x50#")
+                %p.small-text=offer.user
+              %h3=offer.title
+              %h5.needs-description=truncate(offer.description, :length =>95)
               %p
-                =messages_badge(current_user.new_notification_count("my_requests", need))
+                =messages_badge(current_user.new_notification_count("my_requests_chat", offer))
+      %h3 Other people's general offers where I've accepted help
+      %ul.nav.nav-tabs.nav-stacked
+        -@general_offers_accepted.each do |offer|
+          %li
+            =link_to offer do
+              .list-image
+                =image_for_with_validation(offer.user, "60x50#")
+                %p.small-text=offer.user
+              %h3=offer.title
+              %h5.needs-description=truncate(offer.description, :length =>95)
+              %p
+                =messages_badge(current_user.new_notification_count("my_requests", offer))
       .row
         .span6
           =link_to "Add another request for help", new_need_path, :class=>"btn call-to-action primary"
