--- a/app/views/admin/index.html.haml
+++ b/app/views/admin/index.html.haml
@@ -71,12 +71,19 @@
     .span4
       .well
         %h2
+          %i.icon-group
+          Organisations
+        %ul.unstyled
+          %li=link_to "Edit/view organisations", organisations_path
+  .row
+    .span4
+      .well
+        %h2
           %i.icon-envelope-alt
           Messages
         %ul.unstyled
           %li=link_to "View all messages", all_message_threads_path
           %li=link_to "New message", new_message_path
-  .row
     .span4
       .well
         %h2
