--- a/app/views/registrations/steps/_validate.html.haml
+++ b/app/views/registrations/steps/_validate.html.haml
@@ -51,7 +51,7 @@
           We work with a number of your local organisations. If you would like them to tell us that you are who you say you are then select this option.
       .organisation-form.hide
         =form.inputs() do
-          =form.input :organisation_name, :label => false, :as => :select, :collection => User::ORGANISATIONS, :required => false, :prompt => "Please select organisation", :input_html => {:class => "span5"}
+          =form.input :organisation_id, :label => false, :as => :select, :collection => Organisation.valid, :required => false, :prompt => "Please select organisation", :input_html => {:class => "span5"}
 
   =form.input :agreed_conditions, :label => "Please accept our #{link_to 'terms and conditions', '#conditions-popup', :'data-toggle' => 'modal'} and #{link_to 'privacy policy', '#privacy-popup', :'data-toggle' => 'modal'}".html_safe, :required => false
 
