--- a/app/views/users/_table.html.haml
+++ b/app/views/users/_table.html.haml
@@ -10,8 +10,8 @@
       %th Phone number
       -unless tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
         %th=sortable "Method"
+      %th=sortable "Organisation name", tab
       -unless tab == "unvalidated" || tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
-        %th=sortable "Organisation name", tab
         %th=sortable "Neighbourhood champion?", tab
         %th=sortable "Requested to be a champion?", tab
         %th=sortable "Assigned neighbourhood champion?", tab
@@ -20,7 +20,7 @@
         %th=sortable "Sent code", tab
       %th Actions
     -users.each do |user|
-      -if current_user.admin? || user.try(:neighbourhood).try(:admin_id) == current_user.id
+      -if current_user.admin? || user.try(:neighbourhood).try(:admin_id) == current_user.id || user.try(:organisation).try(:admin_id) == current_user.id
         %tr
           %td=full_name_and_role(user)
           %td=user.address_without_postcode
@@ -31,8 +31,8 @@
           %td=user.phone.presence || '-'
           -unless tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
             %td=user.validate_by.try(:humanize).presence || '-'
+          %td=user.validate_by == "organisation" ? user.organisation.presence || '-' : "n/a"
           -unless tab == "unvalidated" || tab == "group_users" || tab == "pre-registered" || tab == "not_in_sheffield"
-            %td=user.validate_by == "organisation" ? user.organisation_name.presence || '-' : "n/a"
             %td=user.is_community_champion? ? 'Yes' : 'No'
             %td=user.champion_request_at.present? ? 'Yes' : 'No'
             %td=user.community_champion.try(:full_name) || '-'
