Full organisation admin permissions

--- a/app/views/modals/_not_validated.html.haml
+++ b/app/views/modals/_not_validated.html.haml
@@ -2,7 +2,7 @@
   .modal-header
     %h3 Before you go any further...
   .modal-body  
-    %p You can't offer help until you've been validated
+    %p You can't do this until you've been validated
     %p We'll contact you soon
   .modal-footer
     <!-- =link_to "Log out", sign_out_path, :method => :delete, :class => "btn pull-left" -->
