Remove fade class for IE10 to make tabs work

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,3 +1,11 @@
+-content_for :head do
+  :javascript
+    $(document).ready(function(){
+      if ($.browser.msie && 10 >= $.browser.version) {
+        $('.fade').removeClass('fade');
+      }
+    })
+
 .container
   .row
     .span5
