--- a/app/views/registrations/steps/_who_you_are.html.haml
+++ b/app/views/registrations/steps/_who_you_are.html.haml
@@ -2,11 +2,13 @@
   =neighbourhood_snippet_text(:reg_form_intro)
   =edit_snippet_link(:reg_form_intro)
 =form.inputs(:class => "form-horizontal") do
-  .control-group#organisation-as-admin-controls{:class => @user.organisation_as_admin.present? ? '' : 'hide'}
+  %strong="Your Organisation's Details" if @user.organisation_as_admin.present?
+  .control-group#organisation-as-admin-controls{:class => @user.organisation_as_admin.present? ? 'mt-2' : 'mt-2 hide'}
     =form.semantic_fields_for :organisation_as_admin do |f|
       =f.input :name, :label => "Organisation Name", :input_html => {:placeholder => "Enter your organisation's name"}
-  =form.input :first_name, :required => false, :help => "Enter your first name", :input_html => {:placeholder => "e.g. John"}
-  =form.input :last_name, :required => false, :input_html => {:placeholder => "e.g. Smith"}, :help => "Enter your family name" 
+  %strong="Your Main Contact's Details" if @user.organisation_as_admin.present?
+  =form.input :first_name, :required => false, :help => "Enter your first name", :input_html => {:placeholder => "e.g. John"}, :class => 'mt-2'
+  =form.input :last_name, :required => false, :input_html => {:placeholder => "e.g. Smith"}, :help => "Enter your family name"
   .control-group{:class => @user.errors[:dob].present? ? 'error' : ''}
     %label.control-label Date of Birth
     .controls#age-select-controls{:class => "#{@user.undisclosed_age? ? "hide" : "show"}"}
